--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body, button {
 /* FAQ */
 
 .FAQ {
-    background-color: #727AD3;
+    background: linear-gradient(#41477F, #727BD7);
     color: white;
 }
 
