--- a/index.css
+++ b/index.css
@@ -1,8 +1,55 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+a:link {
+    text-decoration: none;
+}
+
 body, button {
     font-family: 'Barlow', sans-serif;
 }
 
 
+/* About US */
+
+.ABOUT {
+    background: linear-gradient(#0B0E1E, #41477F);
+    color: white;
+}
+
+.ABOUT .ABOUT-heading {
+    text-align: center;
+    padding-top: 10vh;
+}
+
+.ABOUT .ABOUT-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5vh;
+}
+
+.ABOUT .ABOUT-text-contents {
+    text-align: justify;
+    line-height: 150%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vh;
+    padding-top: 2vh;
+}
+
+.ABOUT .ABOUT-video {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vh;
+    height: 56.25vh;
+    padding-top: 5vh;
+    padding-bottom: 10vh;
+    border: none;
+}
 
 
 /* FAQ */
@@ -60,6 +107,68 @@ body, button {
     transition: max-height 0.2s ease-in-out;
     margin: 1vh 5vh;
 }
+
+/* Volunteer */
+
+.VOLUNTEER {
+    background: linear-gradient(#727BD7, #9884CC);
+    color: white;
+}
+
+.VOLUNTEER .VOLUNTEER-heading {
+    text-align: center;
+    padding-top: 10vh;
+}
+
+.VOLUNTEER .VOLUNTEER-cards-container {
+    padding-top: 5vh;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 3vh;
+}
+
+.VOLUNTEER .VOLUNTEER-card {
+    margin: 5vh;
+    padding: 3vh;
+    width: 30%;
+    border: solid 1px #727AD3;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 4px 4px 5px 3px rgba(0, 0, 0, 10%);
+}
+
+.VOLUNTEER .VOLUNTEER-card-title {
+    font-size: 1.5rem;;
+    font-weight: 800;
+    text-shadow: 2px 2px rgba(0, 0, 0, 25%);
+}
+
+.VOLUNTEER .VOLUNTEER-card-desc {
+    padding-top: 2vh;
+    padding-left: 4vh;
+    padding-right: 4vh;
+}
+
+.VOLUNTEER .VOLUNTEER-card-btn {
+    padding-top: 3vh;
+    display: flex;
+    justify-content: center;
+}
+
+.VOLUNTEER .VOLUNTEER-card-btn-text {
+    padding: 1vh 2vh;
+    background-color: white;
+    border-radius: 5vh;
+    color: #353F95;
+    font-size: 1.2rem;;
+    font-weight: 800;
+}
+
+
 
 /* mobile screens */
 
