--- a/index.css
+++ b/index.css
@@ -1,8 +1,230 @@
-/* Landing page styling */
-
 * {
     margin: 0;
     padding: 0;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+body, button {
+    font-family: 'Barlow', sans-serif;
+}
+
+
+/* About US */
+
+.ABOUT {
+    background: linear-gradient(#0B0E1E, #41477F);
+    color: white;
+}
+
+.ABOUT .ABOUT-heading {
+    text-align: center;
+    padding-top: 10vh;
+}
+
+.ABOUT .ABOUT-contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 5vh;
+}
+
+.ABOUT .ABOUT-text-contents {
+    text-align: justify;
+    line-height: 150%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vh;
+    padding-top: 2vh;
+}
+
+.ABOUT .ABOUT-video {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vh;
+    height: 56.25vh;
+    padding-top: 5vh;
+    padding-bottom: 10vh;
+    border: none;
+}
+
+
+/* FAQ */
+
+.FAQ {
+    background: linear-gradient(#41477F, #727BD7);
+    color: white;
+}
+
+.FAQ .FAQ-row {
+    display: flex;
+}
+
+.FAQ .FAQ-column {
+    flex: 50%;
+}
+
+.FAQ .FAQ-asset {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100vh;
+    margin-bottom: -20vh;
+}
+
+.FAQ .FAQ-heading {
+    text-align: center;
+    padding: 5vh;
+}
+
+.FAQ .FAQ-question-header {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1.5rem;
+    width: 80%;
+    cursor: pointer;
+}
+
+.FAQ .FAQ-answer {
+    font-size: 1.2rem;
+}
+
+.FAQ .FAQ-question-div {
+    margin: 5vh 3vh 5vh 3vh;
+}
+
+.FAQ .FAQ-hr {
+    margin-top: 5vh;
+}
+
+.FAQ .FAQ-answer-div {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out;
+    margin: 1vh 5vh;
+}
+
+/* Volunteer */
+
+.VOLUNTEER {
+    background: linear-gradient(#727BD7, #9884CC);
+    color: white;
+}
+
+.VOLUNTEER .VOLUNTEER-heading {
+    text-align: center;
+    padding-top: 10vh;
+}
+
+.VOLUNTEER .VOLUNTEER-cards-container {
+    padding-top: 5vh;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150vh;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 3vh;
+}
+
+.VOLUNTEER .VOLUNTEER-card {
+    margin: 5vh;
+    padding: 3vh;
+    width: 30%;
+    border: solid 1px #727AD3;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 4px 4px 5px 3px rgba(0, 0, 0, 10%);
+}
+
+.VOLUNTEER .VOLUNTEER-card-title {
+    font-size: 1.5rem;;
+    font-weight: 800;
+    text-shadow: 2px 2px rgba(0, 0, 0, 25%);
+}
+
+.VOLUNTEER .VOLUNTEER-card-desc {
+    padding-top: 2vh;
+    padding-left: 4vh;
+    padding-right: 4vh;
+}
+
+.VOLUNTEER .VOLUNTEER-card-btn {
+    padding-top: 3vh;
+    display: flex;
+    justify-content: center;
+}
+
+.VOLUNTEER .VOLUNTEER-card-btn-text {
+    padding: 1vh 2vh;
+    background-color: white;
+    border-radius: 5vh;
+    color: #353F95;
+    font-size: 1.2rem;;
+    font-weight: 800;
+}
+
+
+
+/* mobile screens */
+
+@media screen and (min-width: 320px) {
+
+    .FAQ .FAQ-asset {
+        width: 40vh;
+        margin-bottom: -20vh;
+    }
+
+    .FAQ .FAQ-row {
+        display: block;
+    }
+}
+
+/* tablet screens */
+
+@media screen and (min-width: 481px) {
+    .FAQ .FAQ-asset {
+        width: 65vh;
+        margin-bottom: -18vh;
+    }
+
+    .FAQ .FAQ-row {
+        display: block;
+    }
+}
+
+/* laptop screens */
+
+@media screen and (min-width: 769px) {
+    .FAQ .FAQ-asset {
+        width: 100vh;
+        margin-bottom: -20vh;
+    }
+
+    .FAQ .FAQ-row {
+        display: flex;
+    }
+}
+
+/* desktop screens */
+@media screen and (min-width: 1025px) {
+    .FAQ .FAQ-asset {
+        width: 100vh;
+        margin-bottom: -20vh;
+    }
+
+    .FAQ .FAQ-row {
+        display: flex;
+    }
+}
+
+/* Landing page styling */
+
+* {
     box-sizing: border-box;
 }
 /* Background gradient */
@@ -185,7 +407,7 @@ div .ghost-3 {
   .openbtn {
     cursor: pointer;
   }
-  
+
 
   /* Footer Styling */
 
