--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* style for the background */
+.background_sponsor{
+    background: linear-gradient(#9884CC, #AF7BA0, #C47378);
+}
+ 
 /* button and rounded button styles */
 .button{
     border: none; 
