--- a/index.css
+++ b/index.css
@@ -445,6 +445,7 @@ div .ghost-3 {
 
 .witch{
     position: relative;
+    width: 100%;
     left: 15%;
     bottom: 10%;
 
@@ -519,8 +520,32 @@ div .ghost-3 {
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
   }
- 
-  
+
+  @media screen and (max-width: 750px) {
+    .mlh-logo img {
+        width: 50px;
+    }
+.ghost-1, .ghost-2 {display: none;}
+.hack-info {
+    text-align: center;
+}
+.hack-info h1 {font-size: 50px;}
+.hack-info h2 {font-size: 25px;}
+.landing-section ul {
+    display: flex;
+    justify-content: space-evenly;
+}
+.byte {
+    display: flex;
+    justify-content: center;
+}
+
+  }
+
+  @media screen and (max-width: 525px) {
+   .mlh-logo img {display: none;}
+   .bats {display: none;}
+  }
 
 
 
