--- a/index.css
+++ b/index.css
@@ -545,6 +545,7 @@ div .ghost-3 {
   @media screen and (max-width: 525px) {
    .mlh-logo img {display: none;}
    .bats {display: none;}
+   #main {width: 50%;}
   }
 
 
