--- a/index.css
+++ b/index.css
@@ -223,7 +223,11 @@ body, button {
     }
 }
 
-
+/* Schedule styling */
+#event-agenda {
+    background-color: #41477F;
+    color: white;
+  }
 /* Landing page styling */
 
 /* Background gradient */
