minor gradient change

--- a/index.css
+++ b/index.css
@@ -101,7 +101,7 @@ body, button {
 /* FAQ */
 
 .FAQ {
-    background: linear-gradient(#41477F, #9884CC, #9884CC);
+    background: linear-gradient(#41477F, #9884CC, #9884CC, #9884CC);
     color: white;
 }
 
