--- a/index.css
+++ b/index.css
@@ -499,7 +499,9 @@ div .ghost-3 {
     text-align: right;
 }
 
-.capital {
+/* Capital One sponsor logo spacing  */
+
+.capital-one {
     margin-left: 10%;
 }
 
