--- a/index.css
+++ b/index.css
@@ -228,7 +228,7 @@ body, button {
     background: url(./img/landing-background.svg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom 75% 25%;  
+    background-position: bottom 75% 25%;
 }
 
 /* Bats image */
@@ -281,7 +281,7 @@ width: 30%;
     font-size: 25px;
     font-weight: 200;
     margin-top: 1em;
-    
+
 }
 
 /* Register button styling */
@@ -348,19 +348,19 @@ height: 246.71px;
         50% {
             transform: translate(-1px, 2px) rotate(-1deg);
         }
-      
+
     }
 
 /* Navigation Links */
 
 #mySidenav a {
-   padding: 25px; 
+   padding: 25px;
    width: 100px;
-   font-size: 25px; 
+   font-size: 25px;
    font-weight: bold;
    color: white;
-  } 
-  
+  }
+
 #mySidenav a img {
   height: 90px;
   width: 100px;
@@ -374,22 +374,22 @@ div .ghost-3 {
 /* sidebar menu */
 
 .sidebar {
-    height: 100%; 
-    width: 0; 
-    position: fixed; 
-    z-index: 1; 
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111; 
-    overflow-x: hidden; 
+    background-color: #111;
+    overflow-x: hidden;
     padding-top: 30px; /* content 60px from top */
     transition: 0.5s; /*slide effect */
   }
-  
+
   .sidebar a {
     display: block;
   }
-  
+
   /* close button (top right corner) */
   .sidebar .closebtn {
     position: absolute;
@@ -398,7 +398,7 @@ div .ghost-3 {
     font-size: 36px;
     margin-left: 50px;
   }
-  
+
   /* open button */
   .openbtn {
     cursor: pointer;
@@ -411,7 +411,7 @@ div .ghost-3 {
 
 /* button and rounded button styles */
 .button{
-    border: none; 
+    border: none;
     padding: 10px;
     padding-left: 20px;
     padding-right: 20px;
@@ -475,22 +475,18 @@ li span{
     display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 3vh;
+    padding: 5vh;
     width: 80%;
 }
 
-/* Capital One sponsor logo spacing  */
-
-.capital-one {
-    margin-left: 10%;
- }   
-
 div a img{
+    padding-right: 20%;
+    padding-bottom: 5%;
     border: none;
     filter: gray;
     -webkit-filter: grayscale(1); /* Webkit Nightlies & Chrome Canary */
-    -webkit-transition: all .8s ease-in-out; 
-    max-width: 150%; 
+    -webkit-transition: all .8s ease-in-out;
+    max-width: 150%;
 }
 
 div a img:hover {
@@ -509,7 +505,6 @@ div a img:hover {
 .bucket{
     text-align: right;
 }
-
 
 @media screen and (max-width: 810px) {
    .register{font-size: 100%;}
@@ -569,7 +564,7 @@ div a img:hover {
     opacity: 0.7;
  }
   /* Responsive layout */
-  
+
   @media screen and (max-height: 450px) {
     .sidebar {padding-top: 15px;}
     .sidebar a {font-size: 18px;}
@@ -601,7 +596,3 @@ div a img:hover {
    .bats {display: none;}
    #main {width: 50%;}
   }
-
-
-
-
